# Q-Research

./: README.md
AI-macro-research/: README.md  pyproject.toml  requirements.txt
AI-macro-research/legacy/: __init__.py  __main__.py  cli.py  config.py  llm.py  reporting.py  retrievers.py  schemas.py  workflow.py
AI-macro-research/src/macro_research_extension/: __init__.py  __main__.py  cli.py  clustering.py  config.py  embeddings.py  history.py  llm.py  mapping.py  regimes.py  reporting.py  retrievers.py  schemas.py  workflow.py
AI-macro-research/tests/: test_clustering.py  test_history.py  test_regimes.py  test_reporting.py  test_workflow.py
CopulaAlpha_LAB/: README.md  requirements.txt
CopulaAlpha_LAB/data/processed/: candidate_pairs.csv  prices.csv  returns.csv
CopulaAlpha_LAB/notebooks/: v2.ipynb  v3_english.ipynb
CopulaAlpha_LAB/results/mixture_only/: backtest.csv  cost_sensitivity.csv  daily_ic.csv  daily_positions.csv  pair_expected_edges.csv  performance_by_period.csv  performance_summary.csv  simple_v2_grid_small.csv
