[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-research-assistant-extension"
version = "0.2.0"
description = "Hybrid LLM and NLP/ML pipeline for dynamic macro theme and regime research."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=6.3.0",
    "feedparser>=6.0.11",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
transformers = [
    "sentence-transformers>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
macro-research-extension = "macro_research_extension.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
